# slic3r

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  bright-builds-rules.audit.md  coding-and-architecture-requirements.audit.md
.github/workflows/: release-build-artifacts.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.10-MILESTONE-AUDIT.md  v1.15-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.11-MILESTONE-AUDIT.md  v1.11-REQUIREMENTS.md  v1.11-ROADMAP.md  v1.12-MILESTONE-AUDIT.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.13-MILESTONE-AUDIT.md  v1.13-REQUIREMENTS.md  v1.13-ROADMAP.md  v1.14-MILESTONE-AUDIT.md  v1.14-REQUIREMENTS.md  v1.15-MILESTONE-AUDIT.md  v1.15-REQUIREMENTS.md  v1.15-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-MILESTONE-AUDIT.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-legacy-oracle/: 02-02-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-rust-workspace/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-contract-inventory/: 04-02-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-entry-surface-architecture/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-03-SUMMARY.md
.planning/phases/06-macos-cli-parity-slice/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-parity-visibility/: 07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md
.planning/phases/08-differential-parity-harness/: 08-01-PLAN.md  08-03-PLAN.md  08-VERIFICATION.md
.planning/phases/09-help-and-usage-slice/: 09-01-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-CONTEXT.md  09-VERIFICATION.md
.planning/phases/10-config-persistence-slice/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-03-SUMMARY.md  10-RESEARCH.md
.planning/phases/11-cli-fixture-and-status-expansion/: 11-CONTEXT.md  11-RESEARCH.md
.planning/phases/12-export-workflow-slice/: 12-01-SUMMARY.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md
.planning/phases/13-transform-and-info-slice/: 13-01-SUMMARY.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-VERIFICATION.md
.planning/phases/14-export-and-transform-fixture-expansion/: 14-01-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/port/: README.md  checklist.md  cli-slice.md  contract-inventory.md  entrypoint-architecture.md  linux-launcher-slice.md  migration-guidance.md  package-map.md  packaged-launcher-slice.md  parity-matrix.md  release-build-automation.md  windows-launcher-slice.md
tools/bazel/: phase1_scaffold_smoke_test.sh
tools/bazel/legacy/: BUILD.bazel  build_legacy_oracle.sh  check_legacy_prereqs.sh  test_legacy_oracle.sh  test_legacy_smoke.sh
tools/release/: build_release_artifact.sh
(+554 files in other folders)
