module(
    name = "slic3r",
    version = "0.0.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.94.1"],
    rustfmt_version = "1.94.1",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
